@@ -1,13 +1,13 @@
 package it.unibo.oop.lab.lambda;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
@@ -17,10 +17,10 @@ import java.util.stream.IntStream;
 
 /**
  * This class will contain four utility functions on lists and maps, of which the first one is provided as example.
- * 
+ * <br>
  * All such methods take as second argument a functional interface from the Java library (java.util.function).
  * This enables calling them by using the concise lambda syntax, as it's done in the main function.
- *
+ * <br>
  * Realize the three methods **WITHOUT** using the Stream library, but only leveraging the lambdas.
  *
  */
@@ -85,12 +85,14 @@ public final class LambdaUtilities {
          * Suggestion: consider Map.merge
          */
         final Map<R, Set<T>> map = new HashMap<>();
-        list.forEach(t -> {
-            map.merge(op.apply(t), new HashSet<>(Arrays.asList(t)), (t1, t2) -> {
-                t1.addAll(t2);
-                return t1;
-            });
-        });
+        // Set union. Could be implemented as a separate function.
+        // Better implementation available in Google Guava
+        final BiFunction<Set<T>, Set<T>, Set<T>> union = (s1, s2) -> {
+            final var result = new LinkedHashSet<>(s1);
+            result.addAll(s2);
+            return result;
+        };
+        list.forEach(t -> map.merge(op.apply(t), Set.of(t), union));
         return map;
     }
 
@@ -123,7 +125,7 @@ public final class LambdaUtilities {
      */
     @SuppressWarnings("PMD.SystemPrintln")
     public static void main(final String[] args) {
-        final List<Integer> li = IntStream.range(1, 8).mapToObj(Integer::valueOf).collect(Collectors.toList());
+        final List<Integer> li = IntStream.range(1, 8).boxed().collect(Collectors.toList());
         System.out.println(dup(li, x -> x + 100));
         /*
          * [1, 101, 2, 102, 3, 103, 4, 104, 5, 105, 6, 106, 7, 107]
